FIX FIREFOX RELAY INPUT Z-INDEX

--- a/Blog/static/Blog/CSS/styles.css
+++ b/Blog/static/Blog/CSS/styles.css
@@ -13,6 +13,13 @@ body {
 }
 
 
+/* BROWSER RESETS */
+
+.fx-relay-email-input-wrapper {
+	z-index: inherit !important;
+}
+
+
 /* LINKS */
 
 a {
